# RavenEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  RavenEngine_Project.md  RavenEngine_Project_Overview.md  blank.doc  fileStructure.md  resources.rc
Assets/Shaders/: FragmentShader.glsl  PointFragmentShader.glsl  PointVertexShader.glsl  ShaderManager.cpp  ShaderManager.h  VertexShader.glsl
Assets/textures/: WhiteNoiseTexture.cpp  WhiteNoiseTexture.h
Components/: CMakeLists.txt  ComponentCreator.cpp  ComponentCreator.h  Components.cpp  Components.h  ComponentsManager.cpp  ComponentsManager.h
Components/Doodle/: CMakeLists.txt  Doodle.cpp  Doodle.h  DoodleBored.cpp  DoodleBored.h  DoodleManager.cpp  DoodleManager.h  README.md
Settings/: ProjectSettings.json  SettingsManager.cpp  SettingsManager.h
Tools/Calc/: Calculator.cpp  Calculator.h  CalculatorManager.cpp  CalculatorManager.h
Tools/Doodle/: Doodle.cpp  Doodle.h  DoodleManager.cpp  DoodleManager.h  doodleShader.glsl
Tools/Palette/: Palette.cpp  Palette.h  PaletteManager.cpp  PaletteManager.h
docs/: fileStructure.md
include/: ImGuiSetup.h  MenuSystem.h  ResourceManager.h  WindowManager.h  Workspace.h
include/Maths/: Vector3.h
include/Renderer/: Renderer.h  Viewport.h
include/Renderer/BaseShapes/: Line.h  Plane.h  Point.h  Shape.h  ShapeManager.h  TriQuad.h
include/Renderer/Primitives/: Line.h  Plane.h  Point.h  Primitive.h  Triangle.h
include/Scene/: SceneHierarchyPanel.h  SceneManager.h  SceneNode.h
include/components/: Component.h  ComponentCreator.h  ComponentManager.h  SceneNode.h  TransformComponent.h
include/core/: AppWindow.h  GameLoop.h  GameStateManager.h  Scene.h  UIManager.h  Viewport.h  WindowManager.h  Workspace.h
include/core/GLFWManagement/: GLFWCallbacks.h  GLFWContextManager.h  GLFWEventPoller.h  GLFWWindowWrapper.h
include/glad/: glad.h
include/utils/: Console.h  FileDialog.h  ImGuiManager.h  ImGuiSetup.h  Inspector.h  MenuSystem.h  PlaybackBar.h  ResourceManager.h  SceneHierarchyPanel.h
include/utils/Calc/: Calculator.h
include/utils/Doodle/: Doodle.h  DoodleManager.h
include/utils/Palette/: Palette.h  PaletteManager.h
src/: ImGuiSetup.cpp  MenuSystem.cpp  ResourceManager.cpp  WindowManager.cpp  Workspace.cpp  glad.c  main.cpp
src/Components/: Component.cpp  ComponentCreator.cpp  ComponentManager.cpp  Components.cpp  ComponentsManager.cpp  SceneNode.cpp  TransformComponent.cpp
src/Physics/: CollisionManager.cpp  CollisionManager.h  CollisionPanel.cpp  CollisionPanel.h  Gravity.cpp  Gravity.h  GravityManager.h  GravityPanel.cpp  GravityPanel.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  RigidBodyPanel.cpp  RigidBodyPanel.h
src/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Viewport.cpp
src/Renderer/BaseShapes/: Line.cpp  Plane.cpp  Point.cpp  Shape.cpp  ShapeManager.cpp  TriQuad.cpp  Triangle.cpp
src/Renderer/Camera/: Camera.cpp  Camera.h
src/Renderer/FBO/: FBManager.cpp  FBManager.h
src/Renderer/Materials/: MaterialManager.cpp  MaterialManager.h  MaterialProperties.h  MaterialProperties3D.h
src/Renderer/Primitives/: Line.cpp  Plane.cpp  Point.cpp  TriQuad.cpp  Triangle.cpp
src/Renderer/Shaders/: FragmentShader.glsl  FragmentShader3D.glsl  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  VertexShader.glsl
src/Renderer/Shapes/: Mesh.h  Shape.cpp  Shape.h  ShapeCreate.cpp  ShapeCreate.h  ShapeManager.cpp  ShapeManager.h  ShapeRenderer.cpp  ShapeRenderer.h
src/Renderer/Shapes/Shape2d/: Circle.cpp  Circle.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Shape2d.cpp  Shape2d.h  ShapeCreate2D.cpp  ShapeCreate2D.h  TriQuad.cpp  TriQuad.h  Triangle.cpp  Triangle.h
src/Renderer/Shapes/Shape3d/: Cube.cpp  Cube.h  Mesh.cpp  Shape3d.cpp  Shape3d.h  ShapeCreate3D.cpp  ShapeCreate3D.h
src/Renderer/Texture/: TextureFileDialog.cpp  TextureFileDialog.h  TextureManager.cpp  TextureManager.h  TextureManagerPanel.cpp  TextureManagerPanel.h  TexturePanel.cpp  TexturePanel.h  TexturePreview.cpp  TexturePreview.h
src/Renderer/UBO/: UniformBuffer.cpp  UniformBuffer.h  UniformBufferManager.cpp  UniformBufferManager.h
src/Scene/: Scene.cpp  Scene.h  SceneGraphRenderer.cpp  SceneGraphRenderer.h  SceneHierarchyPanel.cpp  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  ScenePanel.cpp  ScenePanel.h  SceneSerializer.cpp  SceneSerializer.h
src/core/: AppWindow.cpp  GameLoop.cpp  Scene.cpp  UIManager.cpp  Viewport.cpp  WindowManager.cpp  Workspace.cpp
src/core/GLFWManagement/: GLFWCallbacks.cpp  GLFWContextManager.cpp  GLFWEventPoller.cpp  GLFWWindowWrapper.cpp
src/utils/: Console.cpp  FileDialog.cpp  ImGuiManager.cpp  ImGuiSetup.cpp  Inspector.cpp  MenuSystem.cpp  PlayBackBar.cpp  ResourceManager.cpp  SceneHierarchyPanel.cpp
src/utils/Calc/: Calculator.cpp  CalculatorManager.cpp
src/utils/Debug/: assert.h  logger.cpp  logger.h
src/utils/Doodle/: Doodle.cpp  DoodleManager.cpp
src/utils/Palette/: Palette.cpp  PaletteManager.cpp
